crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__insert_empty_lines.pyi.snap
---
source: crates/ruff/src/rules/isort/mod.rs
expression: diagnostics
---
- - kind:
      name: UnsortedImports
      body: Import block is un-sorted or un-formatted
      suggestion: Organize imports
      fixable: true
    location:
      row: 1
      column: 0
    end_location:
      row: 3
      column: 0
    fix:
      content: "import a\nimport b\n\n"
      location:
        row: 1
        column: 0
      end_location:
        row: 3
        column: 0
    parent: ~
  - kind:
      name: UnsortedImports
      body: Import block is un-sorted or un-formatted
      suggestion: Organize imports
      fixable: true
    location:
      row: 4
      column: 0
    end_location:
      row: 6
      column: 0
    fix:
      content: "import os\nimport sys\n\n"
      location:
        row: 4
        column: 0
      end_location:
        row: 6
        column: 0
    parent: ~
  - kind:
      name: UnsortedImports
      body: Import block is un-sorted or un-formatted
      suggestion: Organize imports
      fixable: true
    location:
      row: 14
      column: 0
    end_location:
      row: 16
      column: 0
    fix:
      content: "import os\nimport sys\n\n"
      location:
        row: 14
        column: 0
      end_location:
        row: 16
        column: 0
    parent: ~

