crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__known_local_folder_separate_local_folder_imports.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
---
./resources/test/fixtures/isort/separate_local_folder_imports.py:1:1: I001 [*] Import block is un-sorted or un-formatted
  |
1 | / import sys
2 | | import ruff
3 | | import leading_prefix
4 | | import os
5 | | from . import leading_prefix
  |
  = help: Organize imports

ℹ Suggested fix
  1 |+import os
1 2 | import sys
  3 |+
  4 |+import leading_prefix
  5 |+
2 6 | import ruff
3   |-import leading_prefix
4   |-import os
5 7 | from . import leading_prefix


