crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__leading_prefix.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
expression: diagnostics
---
- kind:
    name: UnsortedImports
    body: Import block is un-sorted or un-formatted
    commit: Organize imports
    fixable: true
  location:
    row: 1
    column: 7
  end_location:
    row: 2
    column: 9
  fix: ~
  parent: ~
- kind:
    name: UnsortedImports
    body: Import block is un-sorted or un-formatted
    commit: Organize imports
    fixable: true
  location:
    row: 5
    column: 11
  end_location:
    row: 6
    column: 13
  fix: ~
  parent: ~
- kind:
    name: UnsortedImports
    body: Import block is un-sorted or un-formatted
    commit: Organize imports
    fixable: true
  location:
    row: 10
    column: 8
  end_location:
    row: 10
    column: 17
  fix: ~
  parent: ~
- kind:
    name: UnsortedImports
    body: Import block is un-sorted or un-formatted
    commit: Organize imports
    fixable: true
  location:
    row: 13
    column: 0
  end_location:
    row: 13
    column: 9
  fix: ~
  parent: ~

